<resources>
    <string name="app_name">Career</string>
    <string name="get_started">Get Started</string>
    <string name="integrated_services">Integrated\nServices</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">johnDoe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="agent">MYSELF</string>
    <string name="introducer">Referee</string>
    <string name="refree_number">Referee Number</string>
    <string name="ref_no">Ref No</string>
    <string name="attendance">Attendance</string>
    <string name="customer">Contacts</string>
    <string name="available_plan">Available Plans</string>
    <string name="new_assign_customer">New Assign\nCustomer</string>
    <string name="team">Group</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_password">CHANGE  \nPASSWORD</string>
    <string name="email">Email</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="title_activity_locate_us">Locate Us</string>
    <string name="start_timer">Start Timer</string>
    <string name="end_timer">End Timer</string>
    <string name="attendance_taken">Attendance Taken</string>
    <string name="sales">Sales</string>
    <string name="member_details">Member Details</string>
    <string name="business_report">Business Report</string>
    <string name="self_business_report">Self Business Report</string>
    <string name="team_business_report">Group Business Report</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="from">FROM</string>
    <string name="to">TO</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="sales_report">Sales Report</string>
    <string name="internet_unavailable">Internet connection not available</string>
    <string name="no_records_found">No records found</string>
    <string name="no_of_days_present">NO OF DAYS PRESENT :</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="customer_details">Customer Details</string>
    <string name="make_your_attendance">Make your attendance first</string>
    <string name="start_visit">Start Visit</string>
    <string name="select_customer_status">Select customer status</string>
    <string name="end_visit">End Visit</string>
    <string name="comments">Comments</string>
    <string name="select_date">Select Date</string>
    <string name="policy_information">Policy Information</string>
    <string name="payment_details">Payment Details</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="application_number">Application Number</string>
    <string name="upload_image">Upload Image</string>
    <string name="premium_calculator">Premium Calculator</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="set_image">SET IMAGE</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="leave">LEAVE APPLICATION</string>
    <string name="unauthorised">You are not authorised for this action</string>
    <string name="no_items_found">No items found</string>
    <string name="mis_report">MIS Report</string>
    <string name="agent_joining">Enrollment</string>
    <string name="message">MESSAGE</string>
    <string name="circular">CIRCULAR</string>
    <string name="statement">Statement</string>
    <string name="description">Description</string>
    <string name="business_data">Business Date</string>
    <string name="application_no">Application No</string>
    <string name="rank">Rank</string>
    <string name="grade">Grade</string>
    <string name="name">Name</string>
    <string name="branch">Branch</string>
    <string name="doj">DOJ</string>
    <string name="introducer_text">Introducer</string>
    <string name="premium_amount">Premium Amount</string>
    <string name="fresh_weighted">Fresh (Weighted) </string>
    <string name="renewal_weighted">Renewal (Weighted)</string>
    <string name="team_collection_fresh">Team Collection Fresh</string>
    <string name="team_collection_renewal">Team Collection Renewal</string>
    <string name="date">Date</string>
    <string name="frmreg">FRMREG</string>
    <string name="proposer_name">Proposer Name</string>
    <string name="plan_name">Plan Name</string>
    <string name="business_type">Business Type</string>
    <string name="premium_with_tax">Premium With Tax</string>
    <string name="premium_amt">Premium Amt</string>
    <string name="weightage">Weightage</string>
    <string name="status">STATUS</string>
    <string name="premium_frequency">Premium Frequency</string>
</resources>
