<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".integratedServicesForAllTypes.view.BusinessReportFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardViewSelf"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:background="@drawable/dashboaed_tiles"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardElevation="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                   >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivTickSelfReport"
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_4sdp"
                            android:src="@drawable/check"
                            android:layout_alignParentEnd="true"/>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center|bottom"
                            android:orientation="vertical"
                            android:paddingHorizontal="@dimen/_16sdp"
                            android:paddingVertical="@dimen/_12sdp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/ivBusinessReportSelf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_8sdp"
                                android:src="@drawable/ic_briefcase"
                                app:civ_circle_background_color="#141173" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvBusinessReportSelf"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_bold"
                                android:gravity="center"
                                android:text="@string/self_business_report"
                                android:textColor="#141173"
                                android:textSize="@dimen/_8ssp"
                                app:textAllCaps="true" />


                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </RelativeLayout>



                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/materialCardViewTeam"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:background="@drawable/dashboaed_tiles"
                    app:cardCornerRadius="@dimen/_8sdp"
                    app:cardElevation="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    >
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivTickTeamReport"
                            android:visibility="gone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_4sdp"
                            android:src="@drawable/check"
                            android:layout_alignParentEnd="true"/>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center|bottom"
                            android:orientation="vertical"
                            android:paddingHorizontal="@dimen/_16sdp"
                            android:paddingVertical="@dimen/_12sdp">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/ivBusinessReportTeam"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_8sdp"
                                android:src="@drawable/ic_briefcase"
                                app:civ_circle_background_color="#141173" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvBusinessReportTeam"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="bottom|center"
                                android:ellipsize="end"
                                android:fontFamily="@font/roboto_bold"
                                android:gravity="center"
                                android:text="@string/team_business_report"
                                android:textColor="#141173"
                                android:textSize="@dimen/_8ssp"
                                app:textAllCaps="true" />


                        </androidx.appcompat.widget.LinearLayoutCompat>
                    </RelativeLayout>



                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_6sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/llFrom"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:background="@drawable/bg_light_blue">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/ivFromDate"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tvFromDate"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:hint="@string/from"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTo"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:background="@drawable/bg_light_blue">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:id="@+id/ivToDate"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_calendar"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tvToDate"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:hint="@string/to"/>

                </LinearLayout>

            </LinearLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <RadioButton
                    android:id="@+id/rd_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="All"
                    android:checked="true"
                    />

                <RadioButton
                    android:id="@+id/rd_agent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Agent code"
                    android:layout_marginStart="@dimen/_16sdp"
                    />

                <EditText
                    android:id="@+id/et_agentcode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:singleLine="true"
                    android:inputType="number"
                    android:background="@drawable/et_round_bg"
                    />


            </androidx.appcompat.widget.LinearLayoutCompat>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btCheck"
                android:layout_margin="@dimen/_6sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/bg_light_blue"
                android:text="CHECK"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBusinessReport"
                android:visibility="invisible"
                android:layout_below="@id/rvCategories"
                android:paddingVertical="@dimen/_10sdp"
                android:paddingHorizontal="@dimen/_14sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:itemCount="10"
                android:layout_marginBottom="@dimen/_10sdp"
                tools:listitem="@layout/item_team_list_layout"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>