<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".integratedServicesForAllTypes.view.TeamMemberDetailsActivity">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_4sdp"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_6sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_8sdp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_4sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/blue_line"/>


            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_8sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/iv_border">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivIntroducerPic"
                    android:padding="@dimen/_2sdp"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:src="@drawable/ic_employee_blue"
                    />

            </FrameLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tvIName"
                    tools:text="KAMLESH"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/text_deep_blue"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tvAddress"
                    tools:text="Address goes here"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="#524F96"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tvPhn"
                    android:text="0123456789"
                    android:visibility="gone"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="#50F0F2"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_4sdp"
        android:clipChildren="true"
        android:layout_marginVertical="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_6sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_8sdp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llAttendance"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/selectable"
                android:gravity="center|top">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:padding="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/iv_border">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivIntroducerPic1"
                        android:padding="@dimen/_2sdp"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_attandace_tie"
                        />

                </FrameLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tv1"
                    android:text="@string/attendance"
                    app:textAllCaps="true"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/text_deep_blue"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llSales"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:background="@drawable/selectable"
                android:gravity="center|top">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"

                    android:layout_marginBottom="@dimen/_4sdp"
                    android:padding="@dimen/_2sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ivIntroducerPic2"
                        android:padding="@dimen/_2sdp"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_sales"
                        />

                </FrameLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tv2"
                    android:text="@string/sales"
                    app:textAllCaps="true"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/text_deep_blue"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llNewCustomer"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/selectable"
                android:gravity="center|top">
                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"

                    android:layout_marginBottom="@dimen/_4sdp"
                    android:padding="@dimen/_2sdp"
                    android:background="@drawable/iv_border">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivIntroducerPic3"
                        android:padding="@dimen/_2sdp"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:src="@drawable/ic_employee_blue"
                        />

                </FrameLayout>


                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:id="@+id/tv3"
                    android:text="@string/new_assign_customer"
                    app:textAllCaps="true"
                    android:gravity="center"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/text_deep_blue"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>



</androidx.appcompat.widget.LinearLayoutCompat>